--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <br>
                   <table>
                      <tr>
-                        <td>Nombre:</td>
+                       <td> <label for="NOMBRE">Nombre:</label></td>
                         <td><INPUT TYPE="text" name="NOMBRE" maxlength=20></td>
                         <td class="ancho100">Primer&nbsp;Apellido:</td>
                         <td><INPUT TYPE="text" name="APELLIDO1" maxlength=20></td>
