--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                   <br>
                   <table>
                      <tr>
-                       <td> <label for="NOMBRE">Nombre:</label></td>
+                       <td><label for="NOMBRE">Nombre:</label></td>
                         <td><INPUT TYPE="text" name="NOMBRE" maxlength=20></td>
-                        <td class="ancho100">Primer&nbsp;Apellido:</td>
+                        <td class="ancho100"><label for="APELLIDO1">Primer&nbsp;Apellido:</label></td>
                         <td><INPUT TYPE="text" name="APELLIDO1" maxlength=20></td>
                         <td class="ancho115">Segundo&nbsp;Apellido:</td>
                         <td><INPUT TYPE="text" name="APELLIDO2" maxlength=20></td>
